ratt 15 Feb 03
-----------------------

+ Applied mverns patch to fix SEQ temporarily. Will break next patch,
	use it in good health in the mean time.
+ Bumped revision to 4.3.6 for tracking purposes.

Thanks Mvern!

casey 01/17/2003
-----------------------
  + applied quackrabbits patch #669753, fixes to some packet structs.

fee (floyd) 01/16/2003
-----------------------
  ShowEQ 4.3.5 
  + Applied mvern's patch to fix up the latest changes in the network code
    
ratt 9 Jan 03
-----------------------

+ Applied mvern's opcode fixes as a temporary measure to get things
  running.

fee (floyd)  01/03/2003  -  Happy New Year
-----------------------
+ ShowEQ 4.3.4
 + Bug Fixes
   - resolved Qt 3.x performance issues
   - rework some zoning logic to allow for future cleanups
   - clean up some structs in everquest.h
   - temp fix for wineX users

+ Requirement update
  ShowEQ will now require Qt 3.0.5+ from this release forward. 
   Qt 2.3.2 should still work as of this release but may cease to 
   work at a future time.

fee (floyd)  11/11/2002
-----------------------
+ ShowEQ 4.3.3
 + Bug Fixes
   - updated EQDecode to be more sane about accepting user keys
     in conjunction with a new libEQ (ddaac48baaa3e9b015984a366748ed72)

 + Features
   - HotKeys  F12 to load key from file
   - HotKeys  CTRL+F12 to bring up key dialog
    
ratt 10 Nov 2002
----------------------

 + Bug Fixes
   - Fixed walk path length record option (Thanks Nok)

 + Features and Updates
   - Added Nok's Speedometer
   - Catt's spell update
   - Catt's filter update
   - Bluevulpines raid channel update
   


casey 11/07/2002
----------------------
 + conf/seqdef.xml
   - fixed typo (a property tag was missing the y, thx fippy)

fee (floyd) 11/05/2002
----------------------
 + ShowEQ 4.3.2

 + Bug Fixes
   - player corpses will now appear as yellow boxes, not cyan +
   - player corpses will now appear at the correct coordinates