@@ -122,6 +122,7 @@ public slots:
 		    uint8_t animation);
    void updateSpawns(const spawnPositionUpdate* updates);
    void updateSpawnHP(const hpUpdateStruct* hpupdate);
+   void updateNpcHP(const hpNpcUpdateStruct* hpupdate);
    void spawnWearingUpdate(const wearChangeStruct* wearing);
    void consMessage(const considerStruct* con, uint32_t, uint8_t);
    void deleteSpawn(const deleteSpawnStruct* delspawn);
